Fallo en el update dentro de delete

--- a/tasks.json
+++ b/tasks.json
@@ -1,12 +1,18 @@
 {
     "task1": {
-        "id": 0,
-        "title": "Complete the add method",
+        "title": "1",
+        "status": "To do"
+    },
+    "task2": {
+        "title": "Hola",
         "status": "To do"
     },
     "task3": {
-        "id": 2,
-        "title": "Complete the add method",
+        "title": "Hola",
+        "status": "To do"
+    },
+    "task4": {
+        "title": "1",
         "status": "To do"
     }
 }
